fixed children alignment issue

--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -681,3 +681,10 @@
     font-size: $datepicker__font-size * 1.8;
   }
 }
+
+.react-datepicker__children-container {
+  width: 13.8rem;
+  margin: 0.4rem;
+  padding: 0px 0.2rem;
+  height: auto;
+}
